monte carlo update

--- a/monte_carlo.ipynb
+++ b/monte_carlo.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/b9/swzvtq8j1l723xz3fprb149m0000gn/T/ipykernel_15910/1706652440.py:97: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  predictions = pd.concat([predictions, game_pred])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "import pandas as pd\n",
@@ -65,7 +56,7 @@
     "\n",
     "    return np.random.normal(mean_score, std_score, 1000), tempO\n",
     "\n",
-    "def get_spread(ht, at, nuet, games_list):\n",
+    "def get_spread(ht, at, nuet, day, games_list):\n",
     "\n",
     "    home_d = float(kp_ratings[kp_ratings['Team'] == ht]['AdjD'].iloc[0])\n",
     "    away_d = float(kp_ratings[kp_ratings['Team'] == at]['AdjD'].iloc[0])\n",
@@ -95,10 +86,10 @@
     "    game_scores['Result'] = (game_scores['Home Score'] > game_scores['Away Score']).astype(int)\n",
     "    #odds = mean(game_scores['Result'])\n",
     "\n",
-    "    game_line = pd.DataFrame([['Date', ht, mean(home_scores), at, mean(away_scores), nuet,\n",
+    "    game_line = pd.DataFrame([[day, ht, mean(home_scores), at, mean(away_scores), nuet,\n",
     "                              mean(home_scores)-mean(away_scores),mean(home_scores) + mean(away_scores),mean(game_scores['Result'])]])\n",
     "    game_line.columns = ['Date','Team','Score','Opponent','Opponent Score', 'Location', 'Spread', 'OU', 'Win Percent']\n",
-    "    game_line['Date'] = games_list['Date']\n",
+    "\n",
     "\n",
     "    return game_line\n",
     "\n",
@@ -108,9 +99,9 @@
     "    ht = todays_games.iloc[i]['Home']\n",
     "    at = todays_games.iloc[i]['Away']\n",
     "    nuet = todays_games.iloc[i]['Nuetral']\n",
+    "    day = todays_games.iloc[i]['Date']\n",
     "    if (ht in set(teams['Team'])) & (at in set(teams['Team'])):\n",
-    "        game_pred = get_spread(ht, at, nuet, games_list_full)\n",
-    "        game_pred.columns = column_names\n",
+    "        game_pred = get_spread(ht, at, nuet, day, games_list_full), \n",
     "        predictions = pd.concat([predictions, game_pred])\n",
     "\n",
     "\n",
@@ -132,6 +123,95 @@
     "# best_ous = line_analysis.sort_values(by='ou_diff', ascending=False)\n",
     "#\n",
     "# team_sort = predictions.sort_values(by='Team', ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions.to_csv('~/Desktop/cbb_model/MontePreds2024.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "game_pred = game_line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>Opponent</th>\n",
+       "      <th>Opponent Score</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Spread</th>\n",
+       "      <th>OU</th>\n",
+       "      <th>Win Percent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-11-06</td>\n",
+       "      <td>Purdue</td>\n",
+       "      <td>82.777483</td>\n",
+       "      <td>Samford</td>\n",
+       "      <td>61.910725</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20.866758</td>\n",
+       "      <td>144.688208</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date    Team      Score Opponent  Opponent Score  Location     Spread  \\\n",
+       "0 2023-11-06  Purdue  82.777483  Samford       61.910725         0  20.866758   \n",
+       "\n",
+       "           OU  Win Percent  \n",
+       "0  144.688208          0.0  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game_pred"
    ]
   }
  ],
